--- a/src/pages/Signin/styles.css
+++ b/src/pages/Signin/styles.css
@@ -11,12 +11,12 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  gap: 1rem;
   }
 
   .custom-form input {
     width: 100%;
     padding: 8px;
-    margin-bottom: 16px;
   }
 
   .custom-form button {
